force-app/main/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AM_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores identifies if this lead has come from AM business</description>
        <label>AM Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>EU Region - E50</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>SHL Previsor - P10</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_BillingCountry__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alderney</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegowina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_BillingPostalCode__c</fullName>
        <label>Billing Zip/Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address_Line_1__c</fullName>
        <label>Account Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address_Line_2__c</fullName>
        <label>Account Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address_Line_3__c</fullName>
        <label>Account Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State_County__c</fullName>
        <description>added to map from lead to account.</description>
        <label>Account State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <description>Need to ensure that values amended in this field also need to be amended in the Area of Interest field on the Contact</description>
        <inlineHelpText>Populated by Referral submitter, indicating known client interest.</inlineHelpText>
        <label>Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both TA &amp; TM</fullName>
                </value>
                <value>
                    <fullName>Contact Centre Hiring</fullName>
                </value>
                <value>
                    <fullName>Graduate and Early Careers</fullName>
                </value>
                <value>
                    <fullName>Interviewing</fullName>
                </value>
                <value>
                    <fullName>Leadership and Executive Hiring</fullName>
                </value>
                <value>
                    <fullName>Manager Hiring</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Hiring</fullName>
                </value>
                <value>
                    <fullName>Professional Hiring</fullName>
                </value>
                <value>
                    <fullName>Retail Hiring</fullName>
                </value>
                <value>
                    <fullName>Sales Hiring</fullName>
                </value>
                <value>
                    <fullName>Skills Development</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Range__c</fullName>
        <label>Asset Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAMID__c</fullName>
        <label>CAMID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <label>City/Town</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant_Soft_Bounce_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Soft Bounce Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constant_Soft_Bounce_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Soft Bounce Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_CAM_ID__c</fullName>
        <label>Contact CAM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_in_AC__c</fullName>
        <label>Contact Id in AC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Source__c</fullName>
        <label>Conversion Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Re-engagement</fullName>
                </value>
                <value>
                    <fullName>Email Demo Request</fullName>
                </value>
                <value>
                    <fullName>Activity Based Scoring</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Form Fill</fullName>
                </value>
                <value>
                    <fullName>Partner Request</fullName>
                </value>
                <value>
                    <fullName>Trial Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to replace Do Not Call</description>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Opted_In__c</fullName>
        <label>Double Opted In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Group_Subscription__c</fullName>
        <label>Email Group Subscription</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletters</fullName>
                </value>
                <value>
                    <fullName>Service and Event</fullName>
                </value>
                <value>
                    <fullName>Event and Training</fullName>
                </value>
                <value>
                    <fullName>Products and Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opted_In__c</fullName>
        <inlineHelpText>Read Only from Eloqua</inlineHelpText>
        <label>Unsubscribed from email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subscription_Values__c</fullName>
        <label>Email Subscription Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Undeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to show only on global pages in order that a report can be run to check for mail outs</description>
        <label>Email Undeliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>This field has been created as a part of Nomenclature (SSE--113) implementation.</description>
        <inlineHelpText>Select the client business function(s) where the talent level sits</inlineHelpText>
        <label>Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT / Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Customer Service / Call Center</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Procurement &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Corporate Office</fullName>
                </value>
                <value>
                    <fullName>Enterprise Wide</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Store Front</fullName>
                </value>
                <value>
                    <fullName>Logistics &amp; warehouse</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Account_BillingCountry__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Lead_Country__c</fullName>
        <label>Lead Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_in_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive in Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Recruitment / Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Graduate Recruitment</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development / Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Services / Call Centre</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Board of Directors / Trustees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>,Other</fullName>
                    <isActive>false</isActive>
                    <label>,Other</label>
                </value>
                <value>
                    <fullName>-</fullName>
                    <isActive>false</isActive>
                    <label>-</label>
                </value>
                <value>
                    <fullName>-- Please Select --</fullName>
                    <isActive>false</isActive>
                    <label>-- Please Select --</label>
                </value>
                <value>
                    <fullName>2:e vice ordf kommunstyrelsen</fullName>
                    <isActive>false</isActive>
                    <label>2:e vice ordf kommunstyrelsen</label>
                </value>
                <value>
                    <fullName>AGM</fullName>
                    <isActive>false</isActive>
                    <label>AGM</label>
                </value>
                <value>
                    <fullName>AGM - Talent &amp; Engagement</fullName>
                    <isActive>false</isActive>
                    <label>AGM - Talent &amp; Engagement</label>
                </value>
                <value>
                    <fullName>AGM HR</fullName>
                    <isActive>false</isActive>
                    <label>AGM HR</label>
                </value>
                <value>
                    <fullName>AVP HRD</fullName>
                    <isActive>false</isActive>
                    <label>AVP HRD</label>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                    <isActive>false</isActive>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>Adjoint à la DRH</fullName>
                    <isActive>false</isActive>
                    <label>Adjoint à la DRH</label>
                </value>
                <value>
                    <fullName>Administator</fullName>
                    <isActive>false</isActive>
                    <label>Administator</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                    <isActive>false</isActive>
                    <label>Administrative</label>
                </value>
                <value>
                    <fullName>Altro</fullName>
                    <isActive>false</isActive>
                    <label>Altro</label>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                    <isActive>false</isActive>
                    <label>Assistant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journey_Last__c</fullName>
        <label>Journey Last</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Journey_Start__c</fullName>
        <label>Journey Start</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Asset__c</fullName>
        <label>Last Campaign Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Tactic__c</fullName>
        <label>Last Campaign Tactic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_User_Modified_At__c</fullName>
        <label>Last User Modified At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Country__c</fullName>
        <label>Lead Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alderney</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegowina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Score_Verification__c</fullName>
        <label>Lead Score Verification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AQL</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_System_Source__c</fullName>
        <label>Lead System Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Non-Eloqua</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_My_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used for the count</description>
        <label>Not My Lead Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Campaigns__c</fullName>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contact_US__c</fullName>
        <label>Number of Contact US</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Events__c</fullName>
        <label>Number of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Webinar__c</fullName>
        <label>Number of Webinar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>This field has been created as a part of Nomenclature (SSE--113) implementation.</description>
        <inlineHelpText>Select the Offering or Solution that best define the product the client is buying.</inlineHelpText>
        <label>Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cognitive (Verify, G+ etc)</fullName>
                </value>
                <value>
                    <fullName>Cognitive Interactive (Verify Interactive)</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>APTA</fullName>
                </value>
                <value>
                    <fullName>MQ</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Skills: Technology</fullName>
                </value>
                <value>
                    <fullName>Skills: non-Technology</fullName>
                </value>
                <value>
                    <fullName>JFA Standard</fullName>
                </value>
                <value>
                    <fullName>JFA Custom</fullName>
                </value>
                <value>
                    <fullName>SJT Standard</fullName>
                </value>
                <value>
                    <fullName>SJT Custom</fullName>
                </value>
                <value>
                    <fullName>Remote WorkQ</fullName>
                </value>
                <value>
                    <fullName>Coding Simulation (Automata)</fullName>
                </value>
                <value>
                    <fullName>Contact Center Simulation</fullName>
                </value>
                <value>
                    <fullName>Simulation - Others</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: On Demand (Async Video Interview, AutoView)</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: Live (Smart Meet, Live Interview)</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: Live Coding</fullName>
                </value>
                <value>
                    <fullName>SHL Experiences</fullName>
                </value>
                <value>
                    <fullName>Candidate Engagement Portal</fullName>
                </value>
                <value>
                    <fullName>In person Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>In person Development Centre</fullName>
                </value>
                <value>
                    <fullName>Virtual Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Virtual Development Centre</fullName>
                </value>
                <value>
                    <fullName>HiPo</fullName>
                </value>
                <value>
                    <fullName>Leader Edge</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_email__c</fullName>
        <formula>IF(Contains( OwnerId,&apos;00G&apos;), Owner:Queue.QueueEmail, Owner:User.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_fullname__c</fullName>
        <formula>IF(Contains( OwnerId,&apos;00G&apos;),Owner:Queue.QueueName, Owner:User.FirstName&amp;&quot; &quot;&amp; Owner:User.LastName)</formula>
        <label>Owner fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Address_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Email Address Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_contact_address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to set account address same as contact address.</description>
        <inlineHelpText>Please check to set account address same as contact address.</inlineHelpText>
        <label>Same as contact address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_County__c</fullName>
        <description>added to map from lead to contact</description>
        <label>State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>